@@ -40,5 +40,6 @@ SOCKS_USER =
 THREADS = 1
 URL = /satellite_proxy/satellite_proxy.php
 REQUESTS_LOG = requests.log
+SELECTOR_INTERVAL = 20
 MONITORING_ENABLED = 1
 MONITORING_INTERVAL = 60
